--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,3 @@
-body {
-  background: #fff !important;
-}
-
 .typing {
   color: #3F3D56;
   font-size: 5vw;
@@ -12,10 +8,76 @@ body {
   to {width: 23ch;border-color: #000 0;visibility: visible;}
 }
 
-.loader {
-  width: 100vw;
+.mainPaper {
   height: 100vh;
-  background-color: #000;
+}
+
+.main {
+  display: flex;
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #f6f6f6;
+}
+.main:hover {
+  background-color: #ebebeb;
+}
+
+.sidebarChats {
+  background-color: #fff;
+  overflow: auto;
+}
+
+.chat {
+  display: flex;
+  flex-direction: column;
+  flex: 0.65;
+  height: 100vh;
+}
+
+.chatBody {
+  background-image: url('./assets/chatWallpaper.png');
+  background-repeat: repeat;
+  background-position: center;
+  padding: 30px;
+  text-align: left;
+  overflow: auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.chatMsgGet {
+  position: relative;
+  font-size: 16px;
+  padding: 2px 10px;
+  width: fit-content;
+  max-width: 60vw;
+  border-radius: 10px;
+  background-color: rgba(255,255,255,0.7);
+  margin-top: 30px;
+  overflow-wrap: break-word;
+}
+
+.chatMsgSend {
+  position: relative;
+  font-size: 16px;
+  padding: 2px 10px;
+  width: fit-content;
+  max-width: 60vw;
+  border-radius: 10px;
+  background-color: rgba(0,172,255,0.5);
+  margin-top: 30px;
+  margin-left: auto;
+  overflow-wrap: break-word;
+}
+
+.emojiPosition {
+  position: absolute;
+  bottom: 50px;
+}
+
+.chatComponent {
+  height: 100vh;
 }
 
 @media all and (max-width:959px) {
@@ -29,5 +91,62 @@ body {
     animation-fill-mode: forwards;
     animation-delay: 1s;
     width: 23ch;
+  }
+}
+
+@media all and (min-width:600px) {
+  .sidebarChats {
+    background-color: #fff;
+    overflow: auto;
   } 
+  .chatBody {
+    background-image: url('./assets/chatWallpaper.png');
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    text-align: left;
+    overflow: auto;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  .chatMsgGet {
+    position: relative;
+    font-size: 16px;
+    padding: 2px 10px;
+    width: fit-content;
+    max-width: 40vw;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.7);
+    margin-top: 30px;
+    overflow-wrap: break-word;
+  }
+  .chatMsgSend {
+    position: relative;
+    font-size: 16px;
+    padding: 2px 10px;
+    width: fit-content;
+    max-width: 40vw;
+    border-radius: 10px;
+    background-color: rgba(0,172,255,0.5);
+    margin-top: 30px;
+    margin-left: auto;
+    overflow-wrap: break-word;
+  }
+  .chat {
+    display: flex;
+    flex-direction: column;
+    flex: 0.65;
+    height: 90vh;
+  }
+  .emojiPosition {
+    position: absolute;
+    bottom: 85px;
+  }
+  .mainPaper {
+    height: 90vh;
+  }
+  .chatComponent {
+    height: 90vh;
+  }
 }
